# morpheus

./: .gitignore  BUGLOG.md  Cargo.toml  DESIGN.md  PHASE_ONE.md  PLAN.md  PROGRESS.md  README.md  package-lock.json  package.json  tsconfig.json
assets/: morpheus_logo.txt
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/engine/: Cargo.toml
crates/engine/src/: config.rs  draw.rs  input.rs  lib.rs  render.rs  scene.rs  time.rs
examples/: minimal.toml
src/: app.tsx  cli.tsx  index.tsx
src/assets/: logo.txt  logo_desktop.txt
src/components/: FileSystem.tsx  GenactRunner.tsx  LoadingBar.tsx  MainInterface.tsx  Screen.tsx  StatusBar.tsx  Welcome.tsx  WelcomeScreen.tsx
src/data/: bootMessages.ts  filesystem.json
src/utils/: commandExecutor.ts  fileReader.ts  virtualFileSystem.ts
